CHATS_SIT/force-app/main/default/objects/Claim_Day_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ART_Fee_Type__c</fullName>
        <label>ART Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Registration</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Activity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorized_Care_Amount__c</fullName>
        <label>Authorized Care Amount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Care_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Care_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Care Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Amount__c</fullName>
        <label>Claim Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim_Care_Amount__c</fullName>
        <label>Claim Care Amount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Care_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Detail__c</fullName>
        <label>Claim Detail</label>
        <referenceTo>Claim_Detail__c</referenceTo>
        <relationshipLabel>Claim Day Details</relationshipLabel>
        <relationshipName>Claim_Day_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Detail_Type__c</fullName>
        <label>Detail Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Claim</fullName>
                </value>
                <value>
                    <fullName>ART Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Provider_Manual_Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Manual Claim</label>
        <referenceTo>Provider_Manual_Claim__c</referenceTo>
        <relationshipLabel>Claim Day Details</relationshipLabel>
        <relationshipName>Claim_Day_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Claim__c</fullName>
        <label>Reason for Claim</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Authorized care provided not paid automatically</fullName>
                </value>
                <value>
                    <fullName>Care paid at incorrect rate/rate type</fullName>
                </value>
                <value>
                    <fullName>Authorized Drop in Day</fullName>
                </value>
                <value>
                    <fullName>Holiday not paid</fullName>
                </value>
                <value>
                    <fullName>Absence not paid</fullName>
                </value>
                <value>
                    <fullName>County-approved Hold Slots</fullName>
                </value>
                <value>
                    <fullName>Slot Contract</fullName>
                </value>
                <value>
                    <fullName>Activity, Registration, or Transportation (ART) fees</fullName>
                </value>
                <value>
                    <fullName>State-approved ATS Waiver</fullName>
                </value>
                <value>
                    <fullName>Parent didn&apos;t confirm attendance</fullName>
                </value>
                <value>
                    <fullName>Backdated authorization</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Claim Day Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Claim Day Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Day Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>